# PPO-2019

./: Lab04.tar.xz  readme.md
Lab01/: Czas.cpp  Operacje.cpp  Operacje.h  PolozeniePoczatkowe.cpp  Predkosc.cpp  Przyspieszenie.cpp
Lab02/: HarmonicSeries.cpp  HarmonicSeries.h  Main  Main.cpp  Makefile  Polozenie.cpp  Polozenie.h  PolozeniePoczatkowe.h  Predkosc.h  Przyspieszenie.h
Lab03/: GeometricSeries.h  Makefile
Lab04/: CMakeLists.txt  GeometricSeries.cpp  Main.cpp
Lab04 (2)/: CMakeLists.txt  GeometricSeries.cpp  Main.cpp
Lab04/include/: GeometricSeries.h  SeriesInterface.h
Lab04/src/: HarmonicSeries.cpp
Lab05/: Main.cpp
Lab05-Classes/: Main.cpp  create_class.py
Lab05-Classes/include/: Series.h
Lab05-Classes/src/: Series.cpp
Lab05/include/: HarmonicSeries.h  MapDistance.h  MapPoint.h
Lab05/src/: GeometricSeries.cpp  MapDistance.cpp  MapPoint.cpp  SeriesInterface.cpp
Lab06/: Main.cpp
Lab06/include/: Coordinates.h  MapPoint.h
Lab06/src/: Coordinates.cpp  MapPoint.cpp
Lab07/: Main.cpp
Lab07/src/: MapPoint.cpp
Lab08/: CMakeLists.txt
Lab08/src/: GradeBook.cpp
Lab09/: CMakeLists.txt
Lab09/Executables/: CMakeLists.txt
Lab09/Executables/src/: database.cpp
Lab09/GradeBook/include/: Grade.h
Lab09/GradeBook/src/: Grade.cpp
Lab09/StudentDatabase/: CMakeLists.txt
Lab09/StudentDatabase/include/: StudentDatabase.h
Lab09/StudentDatabase/src/: StudentDatabase.cpp
Lab09/StudentList/: CMakeLists.txt
Lab10/: CMakeLists.txt  Main.cpp
Lab10/include/: GradeBook.h  MyString.h
Lab10/src/: MyString.cpp
Lab11/: CMakeLists.txt  Main.cpp
Lab11/include/: BContainer.h  Box.h  Volume.h
Lab11/src/: BContainer.cpp  Box.cpp  Volume.cpp
Lab12/: CMakeLists.txt  Main.cpp
Lab12/include/: Point2D.h  Point2DSmartPtr.h  PointAverage.h
Lab12/src/: Point2D.cpp  Point2DSmartPtr.cpp  PointAverage.cpp
Lab8_L6/src/: Coordinates.cpp
Lab9/: CMakeLists.txt
MultiExecs/: README.md
MultiExecs/Executables/src/: grades.cpp
MultiExecs/GradeBook/: CMakeLists.txt
MultiExecs/GradeBook/src/: GradeBook.cpp
MultiExecs/StudentDatabase/include/: StudentDatabase.h
MultiExecs/StudentList/include/: Student.h  StudentsList.h
MultiExecs/StudentList/src/: Student.cpp  StudentsList.cpp
smartPtr/: CMakeLists.txt  Main.cpp
smartPtr/include/: SmartPtr.h  TestClass.h
smartPtr/src/: SmartPtr.cpp  TestClass.cpp
utils/Complex/: CMakeLists.txt  Main.cpp
utils/Complex/include/: Complex.h  Rational.h
utils/Complex/src/: Complex.cpp
utils/Container/: CMakeLists.txt  Main.cpp
utils/Container/include/: Container.h
utils/Container/src/: Container.cpp
utils/SmartPointer/: CMakeLists.txt  Main.cpp
utils/SmartPointer/include/: SmartPointer.h
